2010-01-12  Peter Kasting  <pkasting@google.com>

        Reviewed by Dimitri Glazkov.

        Remove XBM support from the open-source image decoders.
        https://bugs.webkit.org/show_bug.cgi?id=27823

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCoreSources.bkl:
        * platform/image-decoders/ImageDecoder.cpp:
        (WebCore::ImageDecoder::create):
        * platform/image-decoders/xbm: Removed.
        * platform/image-decoders/xbm/XBMImageDecoder.cpp: Removed.
        * platform/image-decoders/xbm/XBMImageDecoder.h: Removed.

2010-01-12  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=33540
        Make it possible to build in debug mode with assertions disabled

        * dom/Element.cpp: (WebCore::Element::getURLAttribute):
        * dom/SelectElement.cpp: (WebCore::SelectElementData::checkListItems):
        * editing/TextIterator.cpp:
        * loader/Cache.cpp: (WebCore::Cache::removeFromLRUList):
        * rendering/RenderArena.cpp: (WebCore::RenderArena::free):

2010-01-12  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler and Simon Fraser.

        rdar://problem/5684062
        https://bugs.webkit.org/show_bug.cgi?id=23094
        Flash of white when switching from poster image to video playback
        
        https://bugs.webkit.org/show_bug.cgi?id=23140
        <video> poster should scale like a video frame

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::setReadyState): Only call updatePosterImage from one place

        * html/HTMLVideoElement.cpp:
        (WebCore::HTMLVideoElement::HTMLVideoElement): m_shouldShowPosterImage -> m_shouldDisplayPoster.
        (WebCore::HTMLVideoElement::createRenderer): Always create a RenderVideo.
        (WebCore::HTMLVideoElement::attach): Call updatePosterImage before checking to see if we